--- a/NavyAccountWeb/Views/InvestRegisterMvc/outstanding.cshtml
+++ b/NavyAccountWeb/Views/InvestRegisterMvc/outstanding.cshtml
@@ -5,12 +5,12 @@
 
 <div class="header">
     <h1 class="header-title">
-         Money Market
+        OutStanding Investment
     </h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="Home/Index">Main</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Outstanding Money Market</li>
+            <li class="breadcrumb-item active" aria-current="page">OutStanding Investment</li>
         </ol>
     </nav>
 </div>
@@ -18,25 +18,12 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5 class="card-title">Outstanding Money Market</h5>
+                <h5 class="card-title">OutStanding Investment</h5>
             </div>
 
             @TempData["message"]
         <div class="card-body">
-                <div class="row">
-                    <div class="col-md-2 mt-3">
-                        <form asp-action="Export2" method="post" asp-controller="InvestRegisterMvc">
-                            <input type="submit" class="btn btn-primary" value="Excel" />
 
-                        </form>
-                    </div>
-
-                    <div class="col-md-2 mt-3">
-                        <form asp-action="InvestmentMoneyReport" method="get" asp-controller="InvestRegisterMvc">
-                            <i class="fa fa-download" aria-hidden="true"><input type="submit" class="btn btn-primary" value="PDF" /></i>
-                        </form>
-                    </div>
-                </div>
 
             @using (Html.BeginForm("outstanding", "InvestRegisterMvc", FormMethod.Post))
             {
@@ -62,15 +49,35 @@
               
               </div>
                 }
+        @*<div class="col-md-4" style="margin-left:10px">
+            @using (Html.BeginForm("InvestmentMoneyReport", "InvestRegisterMvc", FormMethod.Get))
+            {
+                @Html.AntiForgeryToken()
+                <div class="col-md-3" >
+                    <div class="form-group">
+                        <input type="date" name="startdate" id="period2" class="form-control" />
+                    </div>
+                </div>
+                <div class="col-md-3" hidden>
+                    <div class="form-group">
+                        <input type="date" name="enddate" id="endperiod" class="form-control" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Print" />
+                </div>
+            }
+        </div>*@
                 <table class="table table-striped table-bordered">
                     <tr>
                         <th>Investment Type</th>
-                        <th>Receiving Bank</th>
+                        <th>MatureDate</th>
                         <th>Issuance Bank</th>
-                        <th>Company</th>
+                        <th>Receiving Bank</th>
                         <th>Amount</th>
                         <th>Interest</th>
-                        <th>Maturity Date</th>
+                        <th>Tenure</th>
 
                     </tr>
                     @if (Model != null)
@@ -79,12 +86,12 @@
                         {
                             <tr>
                                 <td>@a.InvestmentType</td>
-                                <td>@a.receivingbank</td>
+                                <td>@a.Maturingdate</td>
                                 <td>@a.issuancebank </td>
-                                <td>@a.company</td>
+                                <td>@a.receivingbank</td>
                                 <td>@a.Amount</td>
                                 <td>@a.interest</td>
-                                <td>@a.Maturingdate</td>
+                                <td>@a.Tenure</td>
 
                             </tr>
                         }
