--- a/NavyAccountWeb/Views/LoanDisc/variance.cshtml
+++ b/NavyAccountWeb/Views/LoanDisc/variance.cshtml
@@ -31,15 +31,12 @@
                         {
                             @Html.AntiForgeryToken()
                             <div class="row">
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Batch</label>
-                                        @Html.DropDownList("batchNo", new SelectList(ViewBag.batch, "batchno", "batchno"), new { @class = "form-control" })
-                                    </div>
+                              <div class="form-group">
+                                    <label>Loan Type</label>
+                                    @Html.DropDownList("loantype", new SelectList(ViewBag.getloantype, "Id", "Description"), new { @class = "form-control" })
                                 </div>
-
-
                             </div>
+
                             <div class="form-group">
                                 <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Generate Variance" />
                             </div>
