--- a/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposalBySchool.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposalBySchool.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = null;
     decimal total = 0M;
+    int serialNumber = 1;
 }
 
 <!DOCTYPE html>
@@ -20,6 +21,7 @@
     <div class="card-body">
         <table border="2" cellpadding="2" cellspacing="0" width="100%">
             <tr>
+                 <th>S/N</th>
                 <th>Reg number</th>
                 <th>Full Name</th>
                 <th>School name</th>
@@ -39,6 +41,7 @@
                 @foreach (var b in Model)
                 {
                     <tr>
+                         <td>@serialNumber</td>
                         <td>@b.Req_Number</td>
                         <td>@b.Surname</td>
                         <td>@b.Schoolname</td>
@@ -46,7 +49,7 @@
                         <td>@b.SchoolType</td>
                         <td>@b.Amount</td>
                     </tr>
-
+                    serialNumber++;
                     total += (decimal)b.Amount;
                 }
                 <tr>
