--- a/NavyAccountWeb/Views/SRSchoolreport/NominalRollInpdf.cshtml
+++ b/NavyAccountWeb/Views/SRSchoolreport/NominalRollInpdf.cshtml
@@ -47,7 +47,7 @@
             {
             <tr>
                 <td>@b.Reg_Number</td>
-                <td>@b.StudentName</td>
+                <td>@b.Studentname</td>
                 <td>@b.Sex</td>
                 <td>@b.Age</td>
                 <td>@b.SchoolName</td>
