--- a/NavyAccountWeb/Views/LoanDisc/loadLoanDisc.cshtml
+++ b/NavyAccountWeb/Views/LoanDisc/loadLoanDisc.cshtml
@@ -47,7 +47,7 @@
               </div>
               <div class="row">
                     <div class="form-group">
-                        <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Loan Disc Upload" />
+                        <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Upload" />
                     </div>
               </div>
                 }
