--- a/NavyAccountWeb/Views/MonthEndProcessing/Yearend.cshtml
+++ b/NavyAccountWeb/Views/MonthEndProcessing/Yearend.cshtml
@@ -22,17 +22,24 @@
             </div>
 
             @TempData["message"]
-            <div class="card-body">
-                @using (Html.BeginForm("YearendPost", "MonthEndProcessing", FormMethod.Post))
-                {
-                    @Html.AntiForgeryToken()
-
+        <div class="card-body">
+            @using (Html.BeginForm("YearendPost", "MonthEndProcessing", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <div class="row">
+                    <div class="col-md-4">
+                        <input type="text" value="@ViewBag.month" id="" name="" class="form-control" />
+                    </div>
+                </div>
+                <br />
+                <div class="row">
                     <div class="form-group">
                         <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Update Year" />
                     </div>
-                }
+                </div>
+            }
 
-            </div>
+        </div>
 
 
 
