--- a/NavyAccountWeb/Views/InvestRegisterMvc/listofinvestment.cshtml
+++ b/NavyAccountWeb/Views/InvestRegisterMvc/listofinvestment.cshtml
@@ -15,64 +15,13 @@
     </nav>
 </div>
 <div class="row">
+
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5 class="card-title">OutStanding Investment</h5>
+               
             </div>
 
-            @TempData["message"]
-            <div class="card-body">
-
-
-                <table class="table table-striped table-bordered">
-                    <tr>
-                        <th>Investment Type</th>
-                        <th>MatureDate</th>
-                        <th>Issuance Bank</th>
-                        <th>Receiving Bank</th>
-                        <th>Amount</th>
-                        <th>Interest</th>
-                        <th>Tenure</th>
-
-                    </tr>
-                    @if (Model != null)
-                    {
-                        @foreach (var a in Model)
-                        {
-                            <tr>
-                                <td>@a.InvestmentType</td>
-                                <td>@a.Maturingdate</td>
-                                <td>@a.issuancebank </td>
-                                <td>@a.receivingbank</td>
-                                <td>@a.Amount</td>
-                                <td>@a.interest</td>
-                                <td>@a.Tenure</td>
-
-                            </tr>
-                        }
-                    }
-                </table>
-
-
-
-            </div>
-
-
-
+            <view-investment-capital></view-investment-capital>
         </div>
     </div>
-</div>
-@*<script>
-        $(document).ready(function () {
-            $('#period').keyup(function (e) {
-                var txtVal = $(this).val();
-                $('#period2').val(txtVal);
-            });
-            $('#period').keyup(function (e) {
-                var txtVal = $(this).val();
-                $('#period2').val(txtVal);
-            });
-        });
-
-    </script>*@
