--- a/NavyAccountWeb/Views/LoanDisc/LoanDiscrepancyReport.cshtml
+++ b/NavyAccountWeb/Views/LoanDisc/LoanDiscrepancyReport.cshtml
@@ -23,18 +23,23 @@
 
 
         </tr>
-        @foreach (var a in Model.Select((x, i) => new { Data = x, Index = i + 1 }))
+         @{
+           var sn = 1;
+         }
+
+        @foreach (var a in Model)
         {
             <tr>
 
-                <td> @Html.DisplayFor(modelItem => a.Index)</td>
-                <td> @Html.DisplayFor(modelItem => a.Data.loanact)</td>
-                <td> @Html.DisplayFor(modelItem => a.Data.personname)</td>
-                <td> @Html.DisplayFor(modelItem => Math.Round(a.Data.loanpay,2))</td>
-                <td> @Html.DisplayFor(modelItem => Math.Round(a.Data.extpay,2))</td>
-                <td> @Html.DisplayFor(modelItem => Math.Round(a.Data.loandiscr,2))</td>
+                <td> @sn</td>
+                <td> @a.loanact</td>
+                <td> @a.personname</td>
+                <td> @Math.Round(a.loanpay,2)</td>
+                <td> @Math.Round(a.extpay,2)</td>
+                <td> @Math.Round(a.loandiscr,2)</td>
 
             </tr>
+            sn++;
         }
     </table>
     <h6 style="text-align:center">RETRICTED</h6>
